--- a/packages/components/datepicker/package.json
+++ b/packages/components/datepicker/package.json
@@ -24,19 +24,18 @@
     "build": "parcel build index.ts"
   },
   "peerDependencies": {
-    "@contentful/f36-components": "^4.0.0",
     "react": ">=16.8"
   },
   "devDependencies": {
-    "@contentful/f36-components": "^4.0.0",
     "@testing-library/jest-dom": "5.11.6",
     "@testing-library/react": "11.2.2",
     "@types/jest": "25.2.3",
-    "@types/pikaday": "^1.7.4",
-    "date-fns": "^2.6.0"
+    "@types/pikaday": "^1.7.4"
   },
   "dependencies": {
     "@babel/runtime": "^7.6.2",
+    "@contentful/f36-components": "^4.0.0",
+    "@contentful/f36-forms": "^4.0.0",
     "date-fns": "^2.6.0",
     "emotion": "^10.0.17",
     "pikaday": "^1.8.0"
