--- a/packages/components/timepicker/package.json
+++ b/packages/components/timepicker/package.json
@@ -24,13 +24,9 @@
     "build": "parcel build index.ts"
   },
   "peerDependencies": {
-    "@contentful/f36-components": "^4.0.0",
-    "@contentful/f36-tokens": "^4.0.0",
     "react": ">=16.8"
   },
   "devDependencies": {
-    "@contentful/f36-components": "^4.0.0",
-    "@contentful/f36-tokens": "^4.0.0",
     "@testing-library/jest-dom": "5.11.6",
     "@testing-library/react": "11.2.2",
     "@types/is-hotkey": "^0.1.1",
@@ -40,6 +36,8 @@
   "dependencies": {
     "@babel/runtime": "^7.6.2",
     "@contentful/f36-components": "^4.0.0",
+    "@contentful/f36-forms": "^4.0.0",
+    "@contentful/f36-tokens": "^4.0.0",
     "date-fns": "^2.9.0",
     "emotion": "^10.0.17",
     "is-hotkey": "^0.1.6",
